Tweak character sheet sidebar to prevent blurred images

--- a/src/styles/actor/sidebar/_index.scss
+++ b/src/styles/actor/sidebar/_index.scss
@@ -7,8 +7,8 @@ aside {
     margin-left: 8px;
     background-image: url("../assets/sheet/red_sidebar_top.webp"), url("../assets/sheet/red_sidebar_bottom.webp");
     background-repeat: no-repeat;
-    background-position: top center, bottom center;
-    background-size: 222px calc(100% - 52px), 222px 52px;
+    background-position: center calc(100% - 52px), center bottom;
+    background-size: 224px 100%, 224px 52px;
     display: flex;
     flex-direction: column;
 
@@ -67,6 +67,7 @@ aside {
         border: none;
         z-index: 10;
         max-width: unset;
+        flex-shrink: 0;
     }
     .sidebar {
         padding: 0 2px 2px 8px;
